# audio_station_loop

./: .github.yml  .gitignore  CMakeLists.txt  mainwindow.ui
.github/workflows/: ci.yml
app/: main.cpp
include/: exampleConfig.h.in
src/: constants.h  img.qrc  main.cpp  mainwindow.ui  references.txt
src/audio/: playback.cpp  playback.h  recording.cpp  recording.h
src/audio_processing/: panning.cpp  panning.h  slip.cpp  slip.h  time_stretching.cpp  time_stretching.h
src/database/: database.cpp  database.h
src/database/schema/: schema.sql
src/loop/: loop.cpp  loop.h
src/track/: track.cpp  track.h
src/ui/: mainwindow.cpp  mainwindow.h  ui.cpp  ui.h
tests/: CMakeLists.txt
tests/audio_processing_tests/: time_stretching_test.cpp
tests/audio_tests/: playback_test.cpp  recording_test.cpp
tests/database_tests/: database_test.cpp
